# pyskeleton

./: .travis.yml  README.md  check.sh  install.sh  pyproject.toml  run.sh  tests.sh
.github/workflows/: main.yml
pyskeleton/: cli.py  config.py  config_parser.py
tests/: test_app.py  test_config.py  test_config_parser.py  test_logging.py
